--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,12 +1,35 @@
-#home {
-  fullstack-logo {
-    padding-top: 30px;
-    width: 150px;
-    margin: 0 auto;
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(-1em);
   }
-  h1 {
-    margin-top: 40px;
-    text-align: center;
+
+  100% {
+    transform: translateY(0em);
+    opacity: 1;
   }
 }
 
+#home {
+  position: relative;
+  background-image: url("/images/home/NZP3K022.jpg");
+  background-origin: center;
+  background-position: center;
+  background-size: cover;
+  background-clip: padding-box;
+  min-height: 40em;
+  min-width: 100%;
+  text-align: center;
+  #main-title {
+    margin: 0px auto;
+    position: relative;
+    padding: 10em 0 0 0;
+    animation: fade-in 1s 1;
+    .register-btn {
+      width: 200px;
+      margin: 0 auto;
+      position: relative;
+      color: #ffffff;
+    }
+  }
+}
