--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <base href="/" />
-    <title>Fullstack Academy Generated Application</title>
+    <title>5 Squadron - Royal New Zealand Air Force</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <script src="/angularfire/dist/angularfire.min.js"></script>
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script src="/main.js"></script>
-</head>
-<body ng-app="FullstackGeneratedApp">
-    <navbar></navbar>
+  </head>
+  <body ng-app="FiveSquadronRNZAFApp">
+    <header-bar></header-bar>
     <div id="main" ui-view></div>
-</body>
+  </body>
+  <!-- Written and designed by F/S Sunil Unka, Air Warfare Specialist, 5 SQN, 2006-2016 -->
 </html>
