--- a/browser/scss/directives/header-bar/main.scss
+++ b/browser/scss/directives/header-bar/main.scss
@@ -16,6 +16,7 @@
   background-color: none;
   height: 5em;
   width: 100%;
+  background: rgba(93, 105, 111, 0.75);
   animation: drop-in 1s 1;
 
   .header-item {
@@ -23,16 +24,22 @@
     margin: auto;
     padding: 0.2em;
     text-align: center;
+    color: #fff;
     transition: all 0.25s ease-in-out;
     -webkit-transition: all 0.25s ease-in-out;
     h4 {
+      font-size: 1.5em;
       margin: 0px;
     }
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.5);
       cursor: pointer;
+      color: #45CDF3;
     }
 
+  }
+
+  .headerStateActive {
+    color: #45CDF3;
   }
 }
