Working on facebook login.

--- a/browser/scss/directives/header-bar/main.scss
+++ b/browser/scss/directives/header-bar/main.scss
@@ -13,10 +13,9 @@
 #header-bar {
   position: fixed;
   z-index: 1000;
-  background-color: none;
+  background-color: #000;
   min-height: 3.5em;
   width: 100%;
-  background: rgba(93, 105, 111, 0.75);
   animation: drop-in 1s 1;
 
   .header-item {
