Added new referred and management states. Still working on user data.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -38,3 +38,6 @@ body {
 @import 'login/main';
 @import 'anniversary/main';
 @import 'new-attendee/main';
+@import 'attendee/main';
+@import 'referredNewAttendee/main';
+@import 'management/main';
