--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -31,6 +31,11 @@ body {
   justify-content: space-around;
 }
 
+.input-sqn {
+  border: none;
+  outline: none;
+}
+
 
 @import 'directives/main';
 @import 'home/main';
