--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -5,6 +5,7 @@
     <title>5 Squadron - Royal New Zealand Air Force</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
