--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -3,6 +3,7 @@
   <head>
     <base href="/" />
     <title>5 Squadron - Royal New Zealand Air Force</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
