Working on user profile display when limits are reached or changed.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -57,6 +57,10 @@ body {
   color: grey;
 }
 
+.sqnInputNoTickets {
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
 .sqnInputActive {
   @extend .sqnInput;
   border-top-width: 3px;
