--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -45,6 +45,9 @@ $theme-transparent-black: rgba(0,0,0,0.75);
   .tile-orions {
     @include theme-shadow-default;
   }
+  .tile-blurb {
+    @include theme-shadow-default;
+  }
 }
 
 @media screen and (max-width: $screen-xxs-max){
