--- a/browser/scss/new-attendee/main.scss
+++ b/browser/scss/new-attendee/main.scss
@@ -1,6 +1,8 @@
 #registerNewAttendee {
   position: relative;
   padding-top: 4em;
+  text-align: center;
+  color: $theme-grey;
   .register-option-complete {
     background-color: lightgreen;
     border: 1px solid green;
@@ -11,7 +13,7 @@
   .button-holder {
     .button-panel {
       text-align: center;
-      box-shadow: 0px 0.5em 1em 0.25em grey;
+      /*box-shadow: 0px 0.5em 1em 0.25em grey;*/
       padding: 1em;
       margin: 0.5em;
       min-width: 150px;
@@ -20,6 +22,9 @@
       flex-grow: 1;
       transition: 0.5s all;
       -webkit-transition: 0.5s all;
+      &:hover {
+        @include theme-shadow-default;
+      }
       &:active {
         box-shadow: 0px 0.5em 1em 0.25em grey inset;
       }
