Fixed issue with gitignore and home page display > 1199px.

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -123,7 +123,7 @@ $theme-transparent-black: rgba(0,0,0,0.75);
   .home-description {
     @include tile-display-none;
     .anniversary-date-banner {
-
+      display: none;
     }
   }
 }
