--- a/browser/scss/new-attendee/main.scss
+++ b/browser/scss/new-attendee/main.scss
@@ -13,7 +13,6 @@
   .button-holder {
     .button-panel {
       text-align: center;
-      /*box-shadow: 0px 0.5em 1em 0.25em grey;*/
       padding: 1em;
       margin: 0.5em;
       min-width: 150px;
@@ -32,7 +31,10 @@
   }
   #registerForm {
     height: auto;
-    input[type="email"] {
+    h4 {
+      background-color: $theme-grey;
+      color: $theme-tacgrey;
+      padding: 0.5em;
     }
   }
 }
