Can only submit form when all fields are valid. Now working on final check for events.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -197,9 +197,11 @@ body {
   margin: 10px;
 }
 
-.sqn-btn-default {
-
+.sqnBtnDisabled {
+  color: $theme-red;
+  border-color: $theme-red;
 }
+
 
 @mixin login-btn-config-settings($bg-color){
   background-color: $bg-color;
