--- a/browser/scss/new-attendee/main.scss
+++ b/browser/scss/new-attendee/main.scss
@@ -37,4 +37,11 @@
       padding: 0.5em;
     }
   }
+  .info-banner {
+    margin: 2em 0em 0em 0em;
+    padding: 1em;
+    text-align: left;
+    background-color: $theme-grey;
+    color: $theme-tacgrey;
+  }
 }
