--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -2,33 +2,35 @@
   padding-top: 5em;
   margin: 0 auto;
   width: 100vw;
-  .login-selector {
+  #login-selector {
+    /*transform: translateY(0em);*/
     margin: 0 auto;
-    width: 20em;
-    .login-option {
-      width: 10em;
-      min-height: 8em;
-      flex-grow: 1;
-      text-align: center;
-      border: 1px dotted brightgreen;
-      margin: 0.25em;
-      cursor: pointer;
-      transition: all 0.5s;
-      -webkit-transition: all 0.5s;
-      &:hover {
-        box-shadow: 0px 7.5px 10px 1px rgba(0, 0, 0, 0.5);
-      }
-
-      &:active {
-        background-color: lightgreen;
-        color: black;
-        box-shadow: 0px 7.5px 10px 1px rgba(0, 0, 0, 0.5) inset;
-      }
-    }
+    max-width: 35em;
+    @include transition-mixin(transform 0.5s, opacity 0.5s ease-in-out);
   }
-  #login-form {
+  #login-selector.ng-hide {
+    transform: translateY(10em);
+    opacity: 0;
+  }
+
+  .email-login-form {
     padding-top: 6em;
     width: 90%;
     margin: 0 auto;
+    @include transition-mixin(all 0.5s ease-in-out);
+
+    .sqnInputError {
+      border: none;
+      border-radius: 0;
+    }
+
+    p {
+      padding: 0.2em 1em;
+    }
+  }
+
+  .email-login-form.ng-hide {
+    opacity: 0;
+    transform: translateY(-5em);
   }
 }
