--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -41,6 +41,10 @@ body {
   font-family: 'Roboto', 'Arial';
 }
 
+alert {
+  border: none;
+}
+
 @mixin text-align-left {
   text-align: left;
 }
@@ -140,7 +144,7 @@ body {
 
 .sqnInputEmail {
   @extend .sqnInputActive;
-  min-width: 20em;
+  min-width: 15em;
   text-align: center;
 }
 
@@ -160,6 +164,24 @@ body {
 
 .sqn-not-available-label.ng-hide {
   opacity: 0;
+}
+
+.button-flex-login-register {
+  text-align: center;
+  padding: 1em;
+  margin: 0.5em;
+  min-width: 150px;
+  height: 150px;
+  cursor: pointer;
+  flex-grow: 1;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  &:hover {
+    @include theme-shadow-default;
+  }
+  &:active {
+    box-shadow: 0px 0.5em 1em 0.25em grey inset;
+  }
 }
 
 
