--- a/browser/scss/new-attendee/main.scss
+++ b/browser/scss/new-attendee/main.scss
@@ -12,21 +12,7 @@
   }
   .button-holder {
     .button-panel {
-      text-align: center;
-      padding: 1em;
-      margin: 0.5em;
-      min-width: 150px;
-      height: 150px;
-      cursor: pointer;
-      flex-grow: 1;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      &:hover {
-        @include theme-shadow-default;
-      }
-      &:active {
-        box-shadow: 0px 0.5em 1em 0.25em grey inset;
-      }
+      @extend .button-flex-login-register;
     }
   }
   .registerForm {
