Fixed discrepenacy with homepage animation.

--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -85,7 +85,9 @@ $theme-transparent-black: rgba(0,0,0,0.75);
   #main-title {
     min-height: 30em;
     @include tile-shadow-display;
-
+    .tile-blurb {
+      @include tile-blurb-md-lg-animation;
+    }
   }
 
   .home-description {
