Working on styling events within the attendee state view.

--- a/browser/scss/directives/_main.scss
+++ b/browser/scss/directives/_main.scss
@@ -1,2 +1,4 @@
 @import 'header-bar/main.scss';
 @import 'attendee-event/main.scss';
+@import 'add-event-guest/main.scss';
+@import 'event-guest/main.scss';
