Modified directives to allow for error indications and styled user events based on their attendance.

--- a/browser/scss/directives/attendee-event/main.scss
+++ b/browser/scss/directives/attendee-event/main.scss
@@ -13,27 +13,36 @@
   flex: 1;
 }
 
+@mixin event-button-containers {
+  @extend .flex-container-row;
+  align-items: stretch;
+  padding: 0;
+  button {
+    @include attend-event-flex-options;
+  }
+}
+
 attendee-event {
   display: block;
-  margin: 0.5em 0em;
-  padding: 1em;
+  margin: 0.5em;
   .flex-container-row {
     padding: 1em;
     h3 {
-     margin: 0;
-     display: inline-block;
+     margin: 0em 0em 0.2em 0em;
      flex: 1;
     }
-    .attend-event {
+
+    button {
+      margin: 0em 0.2em 0.2em 0.2em;
+    }
+
+    header {
       @include attend-event-flex-options;
     }
 
-    .attending-options {
-      @include attend-event-flex-options;
-    }
 
-    .attendee-flex-item {
-      @include attend-event-flex-options;
+    .attend-event-options {
+      @include event-button-containers;
     }
   }
 }
