--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,6 +14,10 @@
   }
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 @mixin transition-mixin($params...){
   transition: $params;
   -webkit-transition: $params;
@@ -67,7 +71,7 @@ alert {
 
 
 #main {
-  
+
 }
 
 .flex-container-row {
